--- a/bestbid/bidding/templates/bidding/index.html
+++ b/bestbid/bidding/templates/bidding/index.html
@@ -11,10 +11,12 @@
 
 	<body>
 
-		{% block body %}
+		<main>
+			{% block body %}
 
-			In Index.html
 
-		{% endblock %}
+
+			{% endblock %}
+		</main>
 	</body>
 </html>
