--- a/bestbid/bidding/templates/bidding/seller_dashboard.html
+++ b/bestbid/bidding/templates/bidding/seller_dashboard.html
@@ -6,7 +6,7 @@
 	<head>
 		<meta charset="UTF-8">
 		{% block head %}
-			<title>Home | BestBid.com</title>
+			<title>Seller | BestBid.com</title>
 		{% endblock %}
 	</head>
 
