--- a/bestbid/bidding/templates/bidding/adminLogin.html
+++ b/bestbid/bidding/templates/bidding/adminLogin.html
@@ -1,53 +1,46 @@
 {% load static %}
 
-<!DOCTYPE html>
-
 <html>
+
 	<head>
 		<meta charset="utf-8">
 
-		<!-- Flatly theme Bootstrap CDN -->
-		<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/flatly/bootstrap.min.css" crossorigin="anonymous" /> -->
-		
-		<!-- Bootstrap CDN -->
-		<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-
-		<!-- Flatly theme Bootstrap Files -->
 		<link rel="stylesheet" href="{% static 'themes/flatly/bootstrap.css' %}">
 		<link rel="stylesheet" href="{% static 'themes/flatly/_bootswatch.scss' %}">
 		<link rel="stylesheet" href="{% static 'themes/flatly/_variables.scss' %}">
 		
-		{% block head %}
-			<title>Error</title>
-		{% endblock %}
-
+        <title>Admin Login</title>
 	</head>
-
 	<body>
-
 		<header>
 			{% include 'bidding/navbar.html' %}
 		</header>
+		<br><br>
+		<div class="container w-50">
+			<main>
+				<center><h1>Admin Login</h1></center>
+
+				<form action="{% url 'adminLogin' %}" method="POST">
+					{% csrf_token %}
+					<div class="form-group">
+						<label for="exampleInputEmail1">Email address</label>
+						<input type="email" class="form-control" name="adminEmail" aria-describedby="emailHelp" placeholder="Admin email">
+					</div>
+					<div class="form-group">
+						<label for="exampleInputPassword1">Password</label>
+						<input type="password" class="form-control" name="adminPassword" placeholder="Admin Password">
+					</div>
+					<input type="submit" class="btn btn-primary" value="Submit">
+				</form>
+				<br>
+			</main>
+		</div>
 		
-		<main>
-			{% block body %}
-				<center>
-					<h1>
-						Some Error Occurred
-					</h1>
-				</center>
-			{% endblock %}
-		</main>
-
-		<footer>
-			{% include 'bidding/footer.html' %}
-		</footer>
-	</body>
-
 	<!-- JavaScript, Popper.js and jQuery files -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 
+	</body>
 </html>
