--- a/bestbid/bidding/templates/bidding/navbar.html
+++ b/bestbid/bidding/templates/bidding/navbar.html
@@ -24,13 +24,17 @@
 			<button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
 		</form> -->
 		&nbsp;&nbsp;&nbsp;
-		<form class="form-inline my-2 my-lg-0" action="{% url 'login' %}">
-			<button class="btn btn-success my-2 my-sm-0">Login</button>
-		</form>
-		&nbsp;&nbsp;&nbsp;
+		{% if loggedIn %}
+			<form class="form-inline my-2 my-lg-0" action="{% url 'logout' %}">
+				<button class="btn btn-success my-2 my-sm-0">Logout</button>
+			</form>
+			&nbsp;&nbsp;&nbsp;
+		{% else %}
+			<form class="form-inline my-2 my-lg-0" action="{% url 'login' %}">
+				<button class="btn btn-success my-2 my-sm-0">Login</button>
+			</form>
+			&nbsp;&nbsp;&nbsp;
+			
+		{% endif %}
 	</div>
   </nav>
-
-  {% block content %}
-	  
-  {% endblock %}
