--- a/bestbid/bidding/templates/bidding/buyer_reg.html
+++ b/bestbid/bidding/templates/bidding/buyer_reg.html
@@ -11,20 +11,28 @@
 	
 	<body>
 		{% block body %}
-
-		<main>
-
-			<h1>Buyer Registration</h1>
-			
-			<form action="buyer_reg" method="POST">
-				{% csrf_token %}
-				{{ form.as_p }}
-		
-				<input type="submit" class="btn btn-primary" value="Submit">
-			</form>
-			{{ form.errors }}
-		</main>
-		<br><br>
+			<div class="container">
+				<main>
+					<h1>Buyer Registration</h1>
+					
+					<form action="{% url 'buyer_reg' %}" method="POST">
+						{% csrf_token %}
+						{{ form.as_p }}
+				
+						<input type="submit" class="btn btn-primary" value="Submit">
+					</form>
+				</main>
+				{{ form.errors }}
+				{% if messages %}
+					<ul class="messages">
+						{% for message in messages %}
+						<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+						{% endfor %}
+					</ul>
+				{% endif %}
+			</div>
+			<br><br>
 		{% endblock %}
 	</body>
-</html>
+	</html>
+	
