--- a/bestbid/bidding/templates/bidding/seller_login.html
+++ b/bestbid/bidding/templates/bidding/seller_login.html
@@ -8,19 +8,27 @@
 	</head>
 	<body>
         {% block body %}
-		<main>
-
-			<h1>Login</h1>
-
-			<form action="seller_login" method="POST">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" class="btn btn-primary" value="Submit">
-            </form>
-            <br>
-            <a href="{% url 'registration' %}"> New to Site ?</a>
-        </main>
-		<br><br>
+            <div class="container">
+                <main>
+                    <h1>Seller Login</h1>
+                    <form action="{% url 'seller_login' %}" method="POST">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <input type="submit" class="btn btn-primary" value="Submit">
+                    </form>
+                    <br>
+                    <a href="{% url 'registration' %}"> New to Site ?</a>
+                </main>
+                {{ form.errors }}
+                {% if messages %}
+                    <ul class="messages">
+                        {% for message in messages %}
+                        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    	{% endfor %}
+                    </ul>
+                {% endif %}
+                <br><br>
+            </div>    
 		{% endblock %}
 	</body>
 </html>
