--- a/bestbid/bidding/templates/bidding/navbar.html
+++ b/bestbid/bidding/templates/bidding/navbar.html
@@ -13,7 +13,7 @@
 				<a class="nav-link" href="#">Bid</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Search</a>
+				<a class="nav-link" href="{% url 'search' %}">Search</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">About</a>
@@ -25,6 +25,11 @@
 		</form> -->
 		&nbsp;&nbsp;&nbsp;
 		{% if loggedIn %}
+
+			<form class="form-inline my-2 my-lg-0" action="{% url 'profile' %}">
+				<button class="btn btn-success my-2 my-sm-0">My Profile</button>
+			</form>
+			&nbsp;&nbsp;&nbsp;
 			<form class="form-inline my-2 my-lg-0" action="{% url 'logout' %}">
 				<button class="btn btn-success my-2 my-sm-0">Logout</button>
 			</form>
