--- a/bestbid/bidding/templates/bidding/footer.html
+++ b/bestbid/bidding/templates/bidding/footer.html
@@ -123,7 +123,7 @@
 
 		  <!-- Copyright -->
 		  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-		    <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+		    <a href="https://mdbootstrap.com/education/bootstrap/"> BestBid.com</a>
 		  </div>
 		  <!-- Copyright -->
 
