--- a/bestbid/bidding/templates/bidding/buyer_login.html
+++ b/bestbid/bidding/templates/bidding/buyer_login.html
@@ -11,12 +11,13 @@
             <div class="container">
 				<main>
 					<h1>Buyer Login</h1>
-
-					<form action="{% url 'buyer_login' %}" method="POST">
-						{% csrf_token %}
-						{{ form.as_p }}
-						<input type="submit" class="btn btn-primary" value="Submit">
-					</form>
+					<div class="w-50">
+						<form action="{% url 'buyer_login' %}" method="POST">
+							{% csrf_token %}
+							{{ form.as_p }}
+							<input type="submit" class="btn btn-primary" value="Submit">
+						</form>
+					</div>
 					<br>
 					<a href="{% url 'registration' %}"> New to Site ?</a>
 				</main>
