--- a/bestbid/bidding/templates/bidding/navbar.html
+++ b/bestbid/bidding/templates/bidding/navbar.html
@@ -6,7 +6,7 @@
   
 	<div class="collapse navbar-collapse" id="navbarColor01">
 		<ul class="navbar-nav mr-auto">
-			<li class="nav-item active">
+			<li class="nav-item {% if home %} active {% endif %}">
 				<a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
@@ -20,9 +20,11 @@
 			</li>
 		</ul>
 		<!-- For Profile Button -->
-		{% if loggedIn %}		
+		{% if loggedIn %}
+			<input type="hidden" name="user_id" value="{{ request.session.id }}">		
+			<input type="hidden" name="user_name" value="{{ request.session.name }}">		
 			<form class="form-inline my-2 my-lg-0" action="{% url 'profile' %}">
-				<button class="btn btn-success my-2 my-sm-0">My Profile</button>
+				<button class="btn btn-success my-2 my-sm-0">{{ request.session.name }}</button>
 			</form>
 		{% endif %}
 		
@@ -43,5 +45,34 @@
 			</form>
 		{% endif %}
 		&nbsp;&nbsp;&nbsp;
+		
+		{% comment %}
+
+		<!-- Button + Dropdown -->
+		<div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+			{% if loggedIn %}
+				<form class="form-inline my-2 my-lg-0" action="{% url 'logout' %}">
+					<button type="button" class="btn btn-success">
+						Logout
+					</button>
+				</form>
+			{% else %}
+				<form class="form-inline my-2 my-lg-0" action="{% url 'login' %}">
+					<button type="button" class="btn btn-success">
+						Login
+					</button>
+				</form>
+			{% endif %}
+			
+			<div class="btn-group" role="group">
+				<button id="btnGroupDrop2" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+				<div class="dropdown-menu" aria-labelledby="btnGroupDrop2" style="">
+					<a class="dropdown-item" href="#">Link 1</a>
+					<a class="dropdown-item" href="#">Link 2</a>
+				</div>
+			</div>
+		</div>
+		{% endcomment %}
+		
 	</div>
   </nav>
