--- a/bestbid/bidding/templates/bidding/navbar.html
+++ b/bestbid/bidding/templates/bidding/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-xl navbar-dark bg-primary">
 	<a class="navbar-brand" href="#">BestBid<small>.com</small></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 	  <span class="navbar-toggler-icon"></span>
@@ -6,18 +6,37 @@
   
 	<div class="collapse navbar-collapse" id="navbarColor01">
 		<ul class="navbar-nav mr-auto">
-			<li class="nav-item {% if home %} active {% endif %}">
-				<a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'bid' %}">Bid</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'search' %}">Search</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">About</a>
-			</li>
+			{% if home %}
+				<li class="nav-item">
+					<a class="nav-link active" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+				</li>
+			{% else %}
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+				</li>
+			{% endif %}
+			{% if bid %}
+				<li class="nav-item">
+					<a class="nav-link active" href="{% url 'bid' %}">Bid</a>
+				</li>
+			{% else %}
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'bid' %}">Bid</a>
+				</li>
+			{% endif %}
+			{% if search %}
+				<li class="nav-item">
+					<a class="nav-link active" href="{% url 'search' %}">Search</a>
+				</li>
+			{% else %}
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'search' %}">Search</a>
+				</li>
+			{% endif %}
+
+				<li class="nav-item">
+					<a class="nav-link" href="#">About</a>
+				</li>
 		</ul>
 		<!-- For Profile Button -->
 		{% if loggedIn %}
