--- a/bestbid/bidding/templates/bidding/profile.html
+++ b/bestbid/bidding/templates/bidding/profile.html
@@ -14,7 +14,29 @@
 		{% block body %}
 			<div class="container w-50">
 				<main>
-					<center><h1>Profile</h1></center>
+					<br>
+					<h1 style="text-align: center;">Profile</h1>
+					<br>
+					
+					<div class="form-group row">
+						<label for="staticEmail" class="col-sm-2 col-form-label">Name</label>
+						<div class="col-sm-10">
+							<input type="text" readonly="" class="form-control-plaintext" id="staticEmail" value="{{ request.session.name }}">
+						</div>
+					</div>
+					<div class="form-group row">
+						<label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+						<div class="col-sm-10">
+							<input type="text" readonly="" class="form-control-plaintext" id="staticEmail" value="{{ request.session.email }}">
+						</div>
+					</div>
+					<div class="form-group row">
+						<label for="staticEmail" class="col-sm-2 col-form-label">Password</label>
+						<div class="col-sm-10">
+							<input type="text" readonly="" class="form-control-plaintext" id="staticEmail" value="{{ request.session.password }}">
+						</div>
+					</div>
+					<br><br><br>
 					<div class="card mb-3">
 						<h3 class="card-header">{{ request.session.name }}</h3>
 						<div class="card-body">
@@ -30,10 +52,9 @@
 						  <li class="list-group-item">Vestibulum at eros</li>
 						</ul>
 						<div class="card-body">
-						  <a href="#" class="card-link">Card link</a>
-						  <a href="#" class="card-link">Another link</a>
+						  <a href="#" class="card-link">Edit Profile</a>
 						</div>
-					  </div>
+					</div>
 				</main>
 			</div>
 		{% endblock %}
