--- a/bestbid/bidding/templates/bidding/search.html
+++ b/bestbid/bidding/templates/bidding/search.html
@@ -20,7 +20,8 @@
 		{% block body %}
 			<div class="container">
 				<main>
-					<center><h1>Search</h1></center>
+					<br>
+					<h1 style="text-align: center;">Search</h1>
 					<br>
 					<div class="w-50">
 						<form action="{% url 'search' %}" method="POST">
@@ -36,11 +37,11 @@
 					{% if search_results %}
 						{% for item in search_results %}
 							<div class="card" style="width:400px">
-								<h3 class="card-header">{{ item.name }}</h3>
+								<h3 class="card-header"><a href="{% url 'asset' item.id %}">{{ item.name }}</a></h3>
 								<div class="card-body">
 									<h5 class="card-title">{{ item.category }}</h5>
 								</div>
-								<img style="height: 100px; width: 100%; display: block;" src='{{ item.image.url }}' alt="Asset Image">
+								<img style="height: 150px; width: 100%; display: block;" src='{{ item.image.url }}' alt="Asset Image">
 								<div class="card-body">
 									<p class="card-text">Baseprice : ${{ item.baseprice }}</p>
 								</div>
@@ -55,9 +56,9 @@
 					{% endif %}
 
 					{% if no_results %}
-						<center><h4>No results</h4></center>
+						<h4 style="text-align: center;">No Results Found</h4>
 					{% endif %}
-					
+
 				</main>
 			</div>
 			<br><br><br>
