--- a/bestbid/bidding/templates/bidding/footer.html
+++ b/bestbid/bidding/templates/bidding/footer.html
@@ -4,6 +4,9 @@
 		<title></title>
 	</head>
 	<body>
+		<br>
+		<hr>
+		<br>
 		<!-- Footer -->
 		<footer class="page-footer font-small indigo">
 
@@ -122,8 +125,8 @@
 		  <!-- Footer Links -->
 
 		  <!-- Copyright -->
-		  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-		    <a href="https://mdbootstrap.com/education/bootstrap/"> BestBid.com</a>
+		  <div class="footer-copyright text-center py-3">&copy; 2020 Copyright:
+		    <a href="http://127.0.0.1:8000/index/"> BestBid.com</a>
 		  </div>
 		  <!-- Copyright -->
 
