--- a/bestbid/bidding/templates/bidding/login.html
+++ b/bestbid/bidding/templates/bidding/login.html
@@ -13,16 +13,17 @@
 		<main class="container">
 			<br>
 			<h1 style="text-align: center;">Login</h1>
-			<div class="row col-sm-6" style="width: 40%;">
-				<div class="card border-primary mb-3">
+			<br>
+			<div class="row" style="width: 100%;">
+				<div class="card border-primary mb-3 col-md-4">
 					<div class="card-header">Seller</div>
 					<div class="card-body">
-					<h4 class="card-title">Login as Seller</h4>
-					<p class="card-text"><a href="{% url 'seller_login' %}">Login as Seller</a></p>
+						<h4 class="card-title">Login as Seller</h4>
+						<p class="card-text"><a href="{% url 'seller_login' %}">Login as Seller</a></p>
 					</div>
 				</div>
-				&nbsp;
-				<div class="card border-primary mb-3">
+				&nbsp;&nbsp;&nbsp;
+				<div class="card border-primary mb-3 col-md-4">
 					<div class="card-header">Buyer</div>
 					<div class="card-body">
 					<h4 class="card-title">Login as Buyer</h4>
