--- a/bestbid/bidding/templates/bidding/seller_dashboard.html
+++ b/bestbid/bidding/templates/bidding/seller_dashboard.html
@@ -14,11 +14,13 @@
 		{% block body %}
 			<div class="container">
 				<main>
-					<h1>Seller Dashboard</h1>
+					<br>
+					<h1 style="text-align: center;">Seller Dashboard</h1>
+					<br>
 					<table class="table table-hover w-50">
 						<thead>
 							<tr>
-								<th scope="col">Seller Info</th>
+								<th scope="col">Seller ID</th>
 								<th scope="col">Name</th>
 								<th scope="col">Email</th>
 								<th scope="col">Contact</th>
@@ -27,7 +29,7 @@
 						<tbody>
 							<tr>
 								<th scope="row">{{ user.id }}</th>
-								<td>{{ user.name }}</td>
+								<td>{{ user.name|title }}</td>
 								<td>{{ user.email }}</td>
 								<td>{{ user.contact }}</td>
 							</tr>
@@ -47,7 +49,7 @@
 					<br>
 					{% for upcoming in auctions %}
 						<div class="card" style="width:400px">
-							<h3 class="card-header">{{ upcoming.asset }}</h3>
+							<!-- <h3 class="card-header">{{ upcoming.asset }}</h3> -->
 							<div class="card-body">
 								<h5 class="card-title">{{ upcoming.category }}</h5>
 							</div>
@@ -58,6 +60,7 @@
 								Sold on : {{ upcoming.date }}
 							</div>
 						</div>
+						<br>
 					{% endfor %}
 				</main>
 			</div>
