--- a/bestbid/bidding/templates/bidding/show_profile.html
+++ b/bestbid/bidding/templates/bidding/show_profile.html
@@ -15,13 +15,13 @@
 			<div class="container w-50">
 				<main>
 					<br>
-					<h1 style="text-align: center;">Prof ile</h1>
+					<h1 style="text-align: center;">Profile</h1>
 					<br>
 					
 					<div class="form-group row">
 						<label for="staticEmail" class="col-sm-2 col-form-label">Name</label>
 						<div class="col-sm-10">
-							<input type="text" readonly="" class="form-control-plaintext" id="staticEmail" value="{{ request.session.name }}">
+							<input type="text" readonly="" class="form-control-plaintext" id="staticEmail" value="{{ user.name|title }}">
 						</div>
 					</div>
 					<div class="form-group row">
@@ -33,12 +33,12 @@
 					<div class="form-group row">
 						<label for="staticEmail" class="col-sm-2 col-form-label">Password</label>
 						<div class="col-sm-10">
-							<input type="text" readonly="" class="form-control-plaintext" id="staticEmail" value="{{ request.session.password }}">
+							<input type="text" readonly="" class="form-control-plaintext" id="staticEmail" value="{{ user.password }}">
 						</div>
 					</div>
 					<br><br><br>
 					<div class="card mb-3">
-						<h3 class="card-header">{{ request.session.name }}</h3>
+						<h3 class="card-header">{{ user.name|title }}</h3>
 						<div class="card-body">
 						  <h5 class="card-title">Special title treatment</h5>
 						  <h6 class="card-subtitle text-muted">Support card subtitle</h6>
@@ -52,11 +52,11 @@
 						  <li class="list-group-item">Vestibulum at eros</li>
 						</ul>
 						{% comment %}
-						
-						<div class="card-body">
-							<a href="{% url 'profile' user_type %}" class="card-link">Edit Profile</a>
-						</div>
+						{% url 'profile' user_type %}
 						{% endcomment %}
+							<div class="card-body">
+								<a href="#" class="card-link">Edit Profile</a>
+							</div>
 					</div>
 				</main>
 			</div>
